infra/applications/hello-world/hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: applications
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: hello-world
