infra/applications/hello-world/hello-world-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  namespace: applications
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hello-world.mydomain.com`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: hello-world
          port: 8080
  tls:
    certResolver: le
